--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,4 +40,5 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 # sub directory
-add_subdirectory(server)
+add_subdirectory(webServer)
+add_subdirectory(tests)
