--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,7 @@
-add_executable(${APP_NAME} main.cpp)
+function(add_app name source)
+    add_executable(${name} ${source})
+    target_link_libraries(${name} PRIVATE ${LIB_NAME})
+endfunction()
 
-target_link_libraries(${APP_NAME}
-        PRIVATE ${LIB_NAME}
-)
+add_app(my-web-server server_main.cpp)
+add_app(my-web-client client_main.cpp)
